--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/purple_700"
+    android:orientation ="vertical">
 
     <TextView
+        android:id="@+id/tvPuzzleteam"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="PUZZLETEAM"
+        android:textColor="@color/black"
+        android:textSize="42sp"
+        android:layout_margin="52dp"/>
+
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="140dp"
+        android:layout_height="136dp"
+        android:layout_gravity="center"
+
+        android:src="@mipmap/puzz" />
+    <TextView
+        android:id="@+id/tvBienvenida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:text="Bienvenidos al mejor juego de puzzles"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:layout_margin="32dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="JUGAR"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:background="@color/purple_700"
+        />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
+    <Button
+        android:id="@+id/Rankingbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PUNTUACIONES"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:background="@color/purple_700"/>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
+    <Button
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="AYUDA"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:background="@color/purple_700"
+        />
+
+
+</LinearLayout>
