--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_margin="32dp"/>
 
     <Button
-
+        android:id="@+id/Juegobtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="JUGAR"
