--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -13,56 +13,57 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp">
-    <Button
-        android:id="@+id/ToMenuBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_700"
-        android:text="Menu"
-        android:textColor="@color/white"
-        android:textSize="15sp"
-        android:layout_marginRight="70dp"
-        />
+        android:weightSum="2" >
 
-        <TextView
-            android:layout_width="90dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Tiempo:"
-            android:textColor="@color/white"
-            android:textSize="20dp" />
-        <TextView
-            android:layout_width="94dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+
+            <TextView
+                android:layout_width="128dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Tiempo:"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="15 s"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:text="15 s"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            />
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="154dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Movimientos:"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="42"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginLeft="110dp"
-            android:text="Movimientos:"
-            android:textColor="@color/white"
-            android:textSize="20dp" />
-        <TextView
-            android:layout_width="94dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:text="42"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            />
-    </LinearLayout>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp"/>
