--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -30,8 +30,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Ranking"
-                android:textSize="32dp"
-                android:fontFamily="sans-serif-black"
+                android:textSize="38dp"
+                android:textStyle="bold"
+
+
                 android:textColor="@color/black"/>
 
             <LinearLayout
@@ -43,7 +45,6 @@
                 <TextView
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-black"
                     android:text="1"
                     android:textAlignment="center"
                     android:textSize="20dp"/>
@@ -54,15 +55,13 @@
                     android:text="Marc"
                     android:textSize="20dp"
                     android:textAlignment="center"
-                    android:fontFamily="sans-serif-black"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="32"
-                    android:textSize="20dp"
-                    android:fontFamily="sans-serif-black"/>
+                    android:textSize="20dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -74,7 +73,6 @@
                 <TextView
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-black"
                     android:text="2"
                     android:textAlignment="center"
                     android:textSize="20dp"/>
@@ -85,15 +83,13 @@
                     android:text="Pedro"
                     android:textSize="20dp"
                     android:textAlignment="center"
-                    android:fontFamily="sans-serif-black"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="29"
-                    android:textSize="20dp"
-                    android:fontFamily="sans-serif-black"/>
+                    android:textSize="20dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -105,7 +101,6 @@
                 <TextView
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-black"
                     android:text="3"
                     android:textAlignment="center"
                     android:textSize="20dp"/>
@@ -116,15 +111,13 @@
                     android:text="PedroM"
                     android:textSize="20dp"
                     android:textAlignment="center"
-                    android:fontFamily="sans-serif-black"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="27"
-                    android:textSize="20dp"
-                    android:fontFamily="sans-serif-black"/>
+                    android:textSize="20dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -136,7 +129,6 @@
                 <TextView
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-black"
                     android:text="4"
                     android:textAlignment="center"
                     android:textSize="20dp"/>
@@ -147,15 +139,13 @@
                     android:text="Toni"
                     android:textSize="20dp"
                     android:textAlignment="center"
-                    android:fontFamily="sans-serif-black"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="24"
-                    android:textSize="20dp"
-                    android:fontFamily="sans-serif-black"/>
+                    android:textSize="20dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -167,7 +157,6 @@
                 <TextView
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-black"
                     android:text="5"
                     android:textAlignment="center"
                     android:textSize="20dp"/>
@@ -178,15 +167,13 @@
                     android:text="Random1"
                     android:textSize="20dp"
                     android:textAlignment="center"
-                    android:fontFamily="sans-serif-black"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="22"
-                    android:textSize="20dp"
-                    android:fontFamily="sans-serif-black"/>
+                    android:textSize="20dp"/>
             </LinearLayout>
 
 
@@ -202,14 +189,7 @@
                     android:hint="Search User Score"></androidx.appcompat.widget.AppCompatEditText>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/ToMenuBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Menu"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:background="@color/purple_700"/>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
