Add Puzzle to JuegoActivity

--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -68,14 +68,75 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="255dp"
-        android:layout_height="400dp"
-        android:visibility="visible"
+    <com.example.puzzledroid.DraggableCoordinatorLayout
+        android:id="@+id/parentCoordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="545dp"
         android:layout_gravity="center"
-        app:srcCompat="@mipmap/foto_temporal"
-        />
+        android:background="#fff">
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/draggableCard1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/house_part_1" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/draggableCard2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/house_part_2" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/draggableCard3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/house_part_3" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/draggableCard4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/house_part_4" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+    </com.example.puzzledroid.DraggableCoordinatorLayout>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
