--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
             />
 
         <com.google.android.material.button.MaterialButton
-
+            android:id="@+id/Ayudabtn"
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
