--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -77,6 +77,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/draggableCard1"
+            android:tag="card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -93,6 +94,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/draggableCard2"
+            android:tag="card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -109,6 +111,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/draggableCard3"
+            android:tag="card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -125,6 +128,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/draggableCard4"
+            android:tag="card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
