--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -86,6 +86,7 @@
             android:translationZ="2dp">
 
             <ImageView
+                android:id="@+id/image1"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 app:srcCompat="@drawable/house_part_1" />
@@ -103,6 +104,7 @@
             android:translationZ="2dp">
 
             <ImageView
+                android:id="@+id/image2"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 app:srcCompat="@drawable/house_part_2" />
@@ -120,6 +122,7 @@
             android:translationZ="2dp">
 
             <ImageView
+                android:id="@+id/image3"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 app:srcCompat="@drawable/house_part_3" />
@@ -137,6 +140,7 @@
             android:translationZ="2dp">
 
             <ImageView
+                android:id="@+id/image4"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 app:srcCompat="@drawable/house_part_4" />
