--- a/app/src/main/res/layout/activity2_juego.xml
+++ b/app/src/main/res/layout/activity2_juego.xml
@@ -56,8 +56,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:text="42"
+                android:id="@+id/Counter"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 />
