--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +9,7 @@
     android:orientation="vertical"
     android:background="@color/purple_700"
     tools:context=".JuegoActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,8 +58,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:text="42"
+                android:id="@+id/Counter"
+                android:text= "0"
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 />
