--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -43,24 +43,27 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/Pos1"
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:text="1"
+                    android:text=""
                     android:textAlignment="center"
                     android:textSize="20dp"/>
                 <TextView
+                    android:id="@+id/User1"
                     android:layout_width="222dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Marc"
+                    android:text=""
                     android:textSize="20dp"
                     android:textAlignment="center"
                     />
                 <TextView
+                    android:id="@+id/Score1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="32"
+                    android:text=""
                     android:textSize="20dp"/>
             </LinearLayout>
 
@@ -71,24 +74,27 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/Pos2"
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:text="2"
+                    android:text=""
                     android:textAlignment="center"
                     android:textSize="20dp"/>
                 <TextView
+                    android:id="@+id/User2"
                     android:layout_width="222dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Pedro"
+                    android:text=""
                     android:textSize="20dp"
                     android:textAlignment="center"
                     />
                 <TextView
+                    android:id="@+id/Score2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="29"
+                    android:text=""
                     android:textSize="20dp"/>
             </LinearLayout>
 
@@ -99,24 +105,27 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/Pos3"
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:text="3"
+                    android:text=""
                     android:textAlignment="center"
                     android:textSize="20dp"/>
                 <TextView
+                    android:id="@+id/User3"
                     android:layout_width="222dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="PedroM"
+                    android:text=""
                     android:textSize="20dp"
                     android:textAlignment="center"
                     />
                 <TextView
+                    android:id="@+id/Score3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="27"
+                    android:text=""
                     android:textSize="20dp"/>
             </LinearLayout>
 
@@ -127,24 +136,27 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/Pos4"
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:text="4"
+                    android:text=""
                     android:textAlignment="center"
                     android:textSize="20dp"/>
                 <TextView
+                    android:id="@+id/User4"
                     android:layout_width="222dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Toni"
+                    android:text=""
                     android:textSize="20dp"
                     android:textAlignment="center"
                     />
                 <TextView
+                    android:id="@+id/Score4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="24"
+                    android:text=""
                     android:textSize="20dp"/>
             </LinearLayout>
 
@@ -155,29 +167,33 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/Pos5"
                     android:layout_width="44dp"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text=""
                     android:textAlignment="center"
                     android:textSize="20dp"/>
                 <TextView
+                    android:id="@+id/User5"
                     android:layout_width="222dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Random1"
+                    android:text=""
                     android:textSize="20dp"
                     android:textAlignment="center"
                     />
                 <TextView
+                    android:id="@+id/Score5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="22"
+                    android:text=""
                     android:textSize="20dp"/>
             </LinearLayout>
 
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/NameToSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -189,6 +205,16 @@
                     android:hint="Search User Score"></androidx.appcompat.widget.AppCompatEditText>
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/SearchUserBtn"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:background="@color/purple_700"
+                android:text="Buscar Jugador"
+                android:textSize="22sp"
+                />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
