--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,17 @@
             android:textSize="22sp"
             app:cornerRadius="16dp" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/HacerFotosBtn"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginVertical="10dp"
+            android:background="@color/purple_700"
+            android:text="Hacer Fotos"
+            android:textSize="22sp"
+            app:cornerRadius="16dp" />
+
 
     </LinearLayout>
 
