--- a/app/src/main/res/layout/activity2_juego.xml
+++ b/app/src/main/res/layout/activity2_juego.xml
@@ -28,7 +28,7 @@
                 android:layout_width="154dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Movimientos:"
+                android:text="@string/movements"
                 android:textColor="@color/white"
                 android:textSize="20dp" />
 
@@ -392,7 +392,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginLeft="110dp"
-            android:text="Nivel:"
+            android:text="@string/level"
             android:textColor="@color/white"
             android:textSize="20dp" />
         <TextView
