--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -30,7 +30,7 @@
                 android:layout_width="154dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Movimientos:"
+                android:text="@string/movements"
                 android:textColor="@color/white"
                 android:textSize="20dp" />
 
@@ -212,7 +212,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginLeft="110dp"
-            android:text="Nivel:"
+            android:text="@string/level"
             android:textColor="@color/white"
             android:textSize="20dp" />
         <TextView
