--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Ranking"
+                android:text="@string/ranking"
                 android:textSize="38dp"
                 android:textStyle="bold"
 
@@ -212,7 +212,7 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="10dp"
                 android:background="@color/purple_700"
-                android:text="Buscar Jugador"
+                android:text="@string/search_player"
                 android:textSize="22sp"
                 />
 
