--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -33,7 +33,7 @@
         android:layout_height="100dp"
         android:layout_margin="18dp"
         android:gravity="center"
-        android:text="Has Ganado!"
+        android:text="@string/you_win"
         android:textColor="@color/white"
         android:textSize="49sp" />
 
@@ -74,7 +74,7 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="10dp"
                 android:background="@color/purple_700"
-                android:text="Guardar Puntuación"
+                android:text="@string/save_score"
                 android:textSize="22sp"
                 />
 
